test/semantic_errors/invalid_null2.mc
void main() {
    char a;
    a = NULL;
}